# wii-nes-palette-tool

./: CMakeLists.txt  README.md  helper.cpp  helper.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
